k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - local
    secretName: self-signed
  rules:
    - host: web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 30000
    - host: phpmyadmin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: database-service
                port:
                  number: 30001
    - host: redis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cache-service
                port:
                  number: 30002
